--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -11,6 +11,13 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+        - os: ubuntu-latest
+          path: ~/.cache/pip
+        - os: macos-latest
+          path: ~/Library/Caches/pip
+        - os: windows-latest
+          path: ~\AppData\Local\pip\Cache
         python-version: [3.7, 3.8, 3.9]
 
     steps:
@@ -21,30 +28,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-
     - uses: actions/cache@v2
-      if: startsWith(runner.os, 'Linux')
       with:
-        path: ~/.cache/pip
-        key: ${{ matrix.os }}-python-${{ matrix.python-version }}-pip-${{ hashFiles('setup.cfg') }}
+        path: ${{ matrix.path }}
+        key: ${{ matrix.os }}-${{ matrix.python-version }}-pip-${{ hashFiles('setup.cfg') }}
         restore-keys: |
-          ${{ matrix.os }}-python-${{ matrix.python-version }}-pip-
-
-    - uses: actions/cache@v2
-      if: startsWith(runner.os, 'macOS')
-      with:
-        path: ~/Library/Caches/pip
-        key: ${{ matrix.os }}-python-${{ matrix.python-version }}-pip-${{ hashFiles('setup.cfg') }}
-        restore-keys: |
-          ${{ matrix.os }}-python-${{ matrix.python-version }}-pip-
-
-    - uses: actions/cache@v2
-      if: startsWith(runner.os, 'Windows')
-      with:
-        path: ~\AppData\Local\pip\Cache
-        key: ${{ matrix.os }}-python-${{ matrix.python-version }}-pip-${{ hashFiles('setup.cfg') }}
-        restore-keys: |
-          ${{ matrix.os }}-python-${{ matrix.python-version }}-pip-
+         ${{ matrix.os }}-${{ matrix.python-version }}-pip-
     - name: Install build tools
       run: |
         make develop
