--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: conventional-pr
-        uses: Namchee/conventional-pr@v0.4
+        uses: Namchee/conventional-pr
         with:
           access_token: ${{ secrets.ADMIN_PAT }}
           check_draft: true
